demos/c_cpp_includes/dtwainx.h

/* DTWAIN Array functions */
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreate(LONG nEnumType,LONG nInitialSize );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreateFromLongs(LPLONG pCArray, LONG nSize);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreateFromLong64s(LPLONG64 pCArray, LONG nSize);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreateFromReals(double* pCArray, LONG nSize);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreateCopy( DTWAIN_ARRAY Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayCopy(DTWAIN_ARRAY Source,DTWAIN_ARRAY Dest);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAdd(DTWAIN_ARRAY pArray, LPVOID pVariant );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddLong(DTWAIN_ARRAY pArray, LONG Val );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddLong64( DTWAIN_ARRAY pArray, LONG64 Val );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddFloat(DTWAIN_ARRAY pArray, DTWAIN_FLOAT Val );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddN( DTWAIN_ARRAY pArray, LPVOID pVariant, LONG num );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddLongN( DTWAIN_ARRAY pArray, LONG Val, LONG num );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddLong64N( DTWAIN_ARRAY pArray, LONG64 Val, LONG num );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayAddFloatN( DTWAIN_ARRAY pArray, DTWAIN_FLOAT Val, LONG num );
LONG           DLLENTRY_DEF      DTWAIN_ArrayFind( DTWAIN_ARRAY pArray, LPVOID pVariant );
LONG           DLLENTRY_DEF      DTWAIN_ArrayFindLong( DTWAIN_ARRAY pArray, LONG Val );
LONG           DLLENTRY_DEF      DTWAIN_ArrayFindLong64( DTWAIN_ARRAY pArray, LONG64 Val );
LONG           DLLENTRY_DEF      DTWAIN_ArrayFindFloat( DTWAIN_ARRAY pArray, DTWAIN_FLOAT Val, DTWAIN_FLOAT Tolerance );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetAt(DTWAIN_ARRAY pArray, LONG nWhere, LPVOID pVariant);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetAtLong(DTWAIN_ARRAY pArray, LONG nWhere, LPLONG pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetAtLong64(DTWAIN_ARRAY pArray, LONG nWhere, LPLONG64 pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetAtFloat(DTWAIN_ARRAY pArray, LONG nWhere, LPDTWAIN_FLOAT pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetSourceAt(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_SOURCE* ppSource);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayGetAtSource(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_SOURCE* ppSource);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAt(DTWAIN_ARRAY pArray, LONG nWhere, LPVOID pVariant);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong(DTWAIN_ARRAY pArray, LONG nWhere, LONG pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong64(DTWAIN_ARRAY pArray, LONG nWhere, LONG64 Val);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtFloat(DTWAIN_ARRAY pArray, LONG nWhere,  DTWAIN_FLOAT pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtN(DTWAIN_ARRAY pArray, LONG nWhere, LPVOID pVariant, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLongN(DTWAIN_ARRAY pArray, LONG nWhere, LONG pVal, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong64N(DTWAIN_ARRAY pArray, LONG nWhere, LONG64 Val, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtFloatN(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_FLOAT Val, LONG num);
LONG           DLLENTRY_DEF      DTWAIN_ArrayGetCount( DTWAIN_ARRAY pArray );
LONG           DLLENTRY_DEF      DTWAIN_ArrayGetType(DTWAIN_ARRAY pArray);
LPVOID         DLLENTRY_DEF      DTWAIN_ArrayGetBuffer( DTWAIN_ARRAY pArray, LONG nPos );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayDestroy( DTWAIN_ARRAY pArray);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_ArrayCreateFromCap(DTWAIN_SOURCE Source, LONG lCapType, LONG lSize);
/* DTWAIN Acquisition functions */
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_AcquireNative(DTWAIN_SOURCE Source,LONG PixelType,LONG nMaxPages,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,LPLONG pStatus);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_AcquireBuffered(DTWAIN_SOURCE Source,LONG PixelType,LONG nMaxPages,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,LPLONG pStatus);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_AcquireToClipboard(DTWAIN_SOURCE Source,LONG PixelType,LONG nMaxPages,LONG nTransferMode,DTWAIN_BOOL bDiscardDibs,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,LPLONG pStatus);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_AcquireFileEx(DTWAIN_SOURCE Source,DTWAIN_ARRAY aFileNames,LONG lFileType,LONG lFileFlags,LONG PixelType,LONG lMaxPages,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,LPLONG pStatus);
/* Acquisition functions that fill a DTWAIN_ARRAY with image data */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_AcquireNativeEx(DTWAIN_SOURCE Source,LONG PixelType,LONG nMaxPages,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,DTWAIN_ARRAY Acquisitions,LPLONG pStatus);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_AcquireBufferedEx(DTWAIN_SOURCE Source,LONG PixelType,LONG nMaxPages,DTWAIN_BOOL bShowUI,DTWAIN_BOOL bCloseSource,DTWAIN_ARRAY Acquisitions,LPLONG pStatus);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_AddPDFTextEx(DTWAIN_SOURCE Source, DTWAIN_PDFTEXTELEMENT TextElement, DWORD Flags);
/* Application adds an item to query the image information.  Before getting the Extended
Image Information, the application will call DTWAIN_AddExtImageInfoQuery multiple times,
each time for each Image Information desired  */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_AddExtImageInfoQuery(DTWAIN_SOURCE Source, LONG ExtImageInfo);
/* Throw exceptions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_AppHandlesExceptions(DTWAIN_BOOL bSet);
/* set TW_FIX32 type */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayFix32SetAt(DTWAIN_ARRAY aFix32, DTWAIN_LONG lPos, DTWAIN_LONG Whole, DTWAIN_LONG Frac);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayFix32GetAt(DTWAIN_ARRAY aFix32, DTWAIN_LONG lPos, LPLONG Whole, LPLONG Frac);
/* special cap functions for TW_FIX32 (only use if DTWAIN_FLOAT gives issues with your environment) */
DTWAIN_ARRAY DLLENTRY_DEF DTWAIN_ArrayConvertFloatToFix32(DTWAIN_ARRAY FloatArray);
DTWAIN_ARRAY DLLENTRY_DEF DTWAIN_ArrayConvertFix32ToFloat(DTWAIN_ARRAY Fix32Array);
/* functions to get string length, max string length in a DTWAIN_ARRAY that holds strings */
LONG DLLENTRY_DEF DTWAIN_ArrayGetStringLength(DTWAIN_ARRAY a, LONG nWhichString);
LONG DLLENTRY_DEF DTWAIN_ArrayGetMaxStringLength(DTWAIN_ARRAY a);
/* function to destroy array of DTWAIN_FRAME objects */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayDestroyFrames(DTWAIN_ARRAY FrameArray);
/* specific DTWAIN_ARRAYFRAME functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayGetAtFrame(DTWAIN_ARRAY FrameArray, LONG nWhere, LPDTWAIN_FLOAT pleft, LPDTWAIN_FLOAT ptop, LPDTWAIN_FLOAT pright, LPDTWAIN_FLOAT pbottom);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayGetAtFrameEx(DTWAIN_ARRAY FrameArray, LONG nWhere, DTWAIN_FRAME Frame);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayAddFrameN(DTWAIN_ARRAY pArray, DTWAIN_FRAME frame, LONG num);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayAddFrame(DTWAIN_ARRAY pArray, DTWAIN_FRAME frame);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayInsertAtFrameN(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_FRAME frame, LONG num);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ArrayInsertAtFrame(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_FRAME frame);
/* TWAIN 1.x memory allocation functions */
HANDLE      DLLENTRY_DEF DTWAIN_AllocateMemory(DWORD memSize);
HANDLE      DLLENTRY_DEF DTWAIN_AllocateMemory64(ULONG64 memSize);
/* TWAIN 2.x memory allocation functions (actual low-level functions determined by TWAINDSM.DLL) */
HANDLE      DLLENTRY_DEF DTWAIN_AllocateMemoryEx(DWORD memSize);
/* String array functions that return pointers */
LPCTSTR DLLENTRY_DEF DTWAIN_ArrayGetAtStringPtr(DTWAIN_ARRAY pArray, LONG nWhere);
LPCWSTR DLLENTRY_DEF  DTWAIN_ArrayGetAtWideStringPtr(DTWAIN_ARRAY pArray, LONG nWhere);
LPCSTR DLLENTRY_DEF  DTWAIN_ArrayGetAtANSIStringPtr(DTWAIN_ARRAY pArray, LONG nWhere);
/* Audio transfers */
DTWAIN_ARRAY DLLENTRY_DEF DTWAIN_AcquireAudioNative(DTWAIN_SOURCE Source, LONG nMaxAudioClips, DTWAIN_BOOL bShowUI, DTWAIN_BOOL bCloseSource, LPLONG pStatus);
DTWAIN_BOOL  DLLENTRY_DEF DTWAIN_AcquireAudioNativeEx(DTWAIN_SOURCE Source, LONG nMaxAudioClips, DTWAIN_BOOL bShowUI, DTWAIN_BOOL bCloseSource, DTWAIN_ARRAY Acquisitions, LPLONG pStatus);