demos/Python/dtwain.py


     #set up the argument types
     theDLL.DTWAIN_AcquireAudioFile.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireAudioFileA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireAudioFileW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireAudioNative.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireAudioNativeEx.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireBuffered.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireBufferedEx.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireFile.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireFileA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireFileEx.argtypes = [ct.c_void_p, ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireFileW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireNative.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireNativeEx.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AcquireToClipboard.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_AddExtImageInfoQuery.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_AddPDFText.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_wchar_p, ct.c_double, ct.c_long, ct.c_long, ct.c_double, ct.c_double, ct.c_double, ct.c_long, ct.c_long]
     theDLL.DTWAIN_AddPDFTextA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long, ct.c_long, ct.c_char_p, ct.c_double, ct.c_long, ct.c_long, ct.c_double, ct.c_double, ct.c_double, ct.c_long, ct.c_long]
     theDLL.DTWAIN_AddPDFTextEx.argtypes = [ct.c_void_p, ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_AddPDFTextW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long, ct.c_wchar_p, ct.c_double, ct.c_long, ct.c_long, ct.c_double, ct.c_double, ct.c_double, ct.c_long, ct.c_long]
     theDLL.DTWAIN_AllocateMemory.argtypes = [ct.c_ulong]
     theDLL.DTWAIN_AllocateMemory64.argtypes = [ct.c_uint64]
     theDLL.DTWAIN_AllocateMemoryEx.argtypes = [ct.c_ulong]
     theDLL.DTWAIN_AppHandlesExceptions.argtypes = [ct.c_long]
     theDLL.DTWAIN_ArrayAdd.argtypes = [ct.c_void_p, ct.c_void_p]
     theDLL.DTWAIN_ArrayAddANSIString.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayAddANSIStringN.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddFloat.argtypes = [ct.c_void_p, ct.c_double]
     theDLL.DTWAIN_ArrayAddFloatN.argtypes = [ct.c_void_p, ct.c_double, ct.c_long]
     theDLL.DTWAIN_ArrayAddFloatString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayAddFloatStringA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayAddFloatStringN.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddFloatStringNA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddFloatStringNW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddFloatStringW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayAddFrame.argtypes = [ct.c_void_p, ct.c_void_p]
     theDLL.DTWAIN_ArrayAddFrameN.argtypes = [ct.c_void_p, ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddLong.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddLong64.argtypes = [ct.c_void_p, ct.c_int64]
     theDLL.DTWAIN_ArrayAddLong64N.argtypes = [ct.c_void_p, ct.c_int64, ct.c_long]
     theDLL.DTWAIN_ArrayAddLongN.argtypes = [ct.c_void_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayAddN.argtypes = [ct.c_void_p, ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayAddStringA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayAddStringN.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddStringNA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddStringNW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayAddStringW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayAddWideString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayAddWideStringN.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayConvertFix32ToFloat.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayConvertFloatToFix32.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayCopy.argtypes = [ct.c_void_p, ct.c_void_p]
     theDLL.DTWAIN_ArrayCreate.argtypes = [ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayCreateCopy.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayCreateFromCap.argtypes = [ct.c_void_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayCreateFromLong64s.argtypes = [ct.POINTER(ct.c_int64), ct.c_long]
     theDLL.DTWAIN_ArrayCreateFromLongs.argtypes = [ct.POINTER(ct.c_long), ct.c_long]
     theDLL.DTWAIN_ArrayCreateFromReals.argtypes = [ct.POINTER(ct.c_double), ct.c_long]
     theDLL.DTWAIN_ArrayDestroy.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayDestroyFrames.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayFind.argtypes = [ct.c_void_p, ct.c_void_p]
     theDLL.DTWAIN_ArrayFindANSIString.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayFindFloat.argtypes = [ct.c_void_p, ct.c_double, ct.c_double]
     theDLL.DTWAIN_ArrayFindFloatString.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayFindFloatStringA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayFindFloatStringW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayFindLong.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayFindLong64.argtypes = [ct.c_void_p, ct.c_int64]
     theDLL.DTWAIN_ArrayFindString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayFindStringA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayFindStringW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayFindWideString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayFix32GetAt.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_long), ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_ArrayFix32SetAt.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayGetAt.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p]
     theDLL.DTWAIN_ArrayGetAtANSIString.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayGetAtANSIStringPtr.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayGetAtFloat.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_ArrayGetAtFloatString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtFloatStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayGetAtFloatStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtFrame.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_ArrayGetAtFrameEx.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p]
     theDLL.DTWAIN_ArrayGetAtFrameString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtFrameStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_ArrayGetAtFrameStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtLong.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_ArrayGetAtLong64.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_int64)]
     theDLL.DTWAIN_ArrayGetAtSource.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_ArrayGetAtString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayGetAtStringPtr.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayGetAtStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtWideString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayGetAtWideStringPtr.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayGetBuffer.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayGetCount.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayGetMaxStringLength.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayGetSourceAt.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_ArrayGetStringLength.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayGetType.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ArrayInsertAt.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p]
     theDLL.DTWAIN_ArrayInsertAtANSIString.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayInsertAtANSIStringN.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtFloat.argtypes = [ct.c_void_p, ct.c_long, ct.c_double]
     theDLL.DTWAIN_ArrayInsertAtFloatN.argtypes = [ct.c_void_p, ct.c_long, ct.c_double, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtFloatString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayInsertAtFloatStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayInsertAtFloatStringN.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtFloatStringNA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtFloatStringNW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtFloatStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayInsertAtFrame.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p]
     theDLL.DTWAIN_ArrayInsertAtFrameN.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtLong.argtypes = [ct.c_void_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtLong64.argtypes = [ct.c_void_p, ct.c_long, ct.c_int64]
     theDLL.DTWAIN_ArrayInsertAtLong64N.argtypes = [ct.c_void_p, ct.c_long, ct.c_int64, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtLongN.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtN.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayInsertAtStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_ArrayInsertAtStringN.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtStringNA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtStringNW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_ArrayInsertAtStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_ArrayInsertAtWideString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
